# tnake

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: abuffer.h  ansi.h  digitaldisplay.h  fruit.h  gameboard.h  gameplay.h  gmenu.h  keyboard.h  message.h  objectspace.h  printter.h  renders.h  screen.h  snake.h  space.h  styles.h  terminal.h  translate.h  utils.h
logger/: logger.c  logger.h
src/: abuffer.c  ansi.c  digitaldisplay.c  fruit.c  gameboard.c  gameplay.c  gmenu.c  keyboard.c  main.c  message.c  objectspace.c  printter.c  renders.c  screen.c  snake.c  space.c  styles.c  terminal.c  utils.c
